--- a/client/src/componenet/app.css
+++ b/client/src/componenet/app.css
@@ -1,3 +1,24 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	background: #f3f4f6;
+	font-family: "Montserrat", -apple-system, system-ui, BlinkMacSystemFont,
+		"Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+	font-size: 20px;
+	letter-spacing: 1px;
+	color: #778298;
+}
+a {
+	text-decoration: none;
+	color: #778298;
+}
 h1 {
 	text-align: center;
 }
@@ -32,9 +53,21 @@ li {
 	list-style-type: none;
 }
 
-.selected {
-	font-weight: bold;
-}
 p {
 	margin: 0;
+}
+button {
+	background-color: #4caf50; /* Green */
+	border: none;
+	color: white;
+	padding: 6px 8px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+
+input {
+	padding: 6px 8px;
+	box-sizing: border-box;
 }
